kubernetes/common/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: narky-blog-ingress
  namespace: default
spec:
  rules:
    - host: blog.narky.io
      http:
        paths:
          - backend:
              serviceName: narky-blog-io
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: narky-blog-io
  namespace: default
  labels:
    app: narky-blog-io
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: narky-blog-io
